fix content overflow issues

--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,11 @@ p {
 .alt {
   background-color: #e8eaf6;
 }
+.section {
+  padding: 10px;
+}
 .graph {
   width: 90%;
-  padding: 20px;
 }
 table {
   border-collapse: collapse;
@@ -96,7 +98,6 @@ td {
   width: 90%;
   height: 300px;
   margin: 50px 0;
-  padding: 20px;
 }
 select {
   outline: none;
